work on contact page

--- a/contact-page-test.html
+++ b/contact-page-test.html
@@ -82,18 +82,86 @@
                     margin-right: 10px;
                 }
 
+                .ec-subheader {
+                    padding-bottom: 10px;
+                }
+
+                .ec-contact-group {
+                    padding-bottom: 40px;
+                }
+
 
             </style>
 
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+            <h2>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </h2>
             <br />
-            <p>Donec eleifend tempor enim, vel mollis lorem aliquet at. In feugiat diam enim, ac eleifend ipsum mollis ac. In sit amet sem in sem volutpat malesuada ut vel velit. In aliquam ultrices vestibulum. Ut tincidunt vel augue quis bibendum. Maecenas iaculis pulvinar erat, eget venenatis eros scelerisque ut. Sed ac tortor nec odio cursus dapibus. Aliquam non sem convallis, venenatis purus nec, vehicula turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eleifend gravida ligula, interdum condimentum eros tincidunt sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed non tristique urna. Maecenas iaculis consequat mollis. Maecenas viverra imperdiet pretium.
+            <p>
+                Donec eleifend tempor enim, vel mollis lorem aliquet at. In feugiat diam enim, ac eleifend ipsum mollis ac. In sit amet sem in sem volutpat malesuada ut vel velit. In aliquam ultrices vestibulum. Ut tincidunt vel augue quis bibendum. Maecenas iaculis pulvinar erat, eget venenatis eros scelerisque ut. Sed ac tortor nec odio cursus dapibus. Aliquam non sem convallis, venenatis purus nec, vehicula turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eleifend gravida ligula, interdum condimentum eros tincidunt sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed non tristique urna. Maecenas iaculis consequat mollis. Maecenas viverra imperdiet pretium.
             </p>
             <p>
-            Proin at euismod ipsum, id fringilla augue. Suspendisse faucibus sem sit amet gravida euismod. Sed porttitor ornare risus. Donec tristique eu turpis in aliquet. Proin a auctor dui. Quisque condimentum pulvinar enim non vulputate. Sed at tincidunt nulla.
+                Proin at euismod ipsum, id fringilla augue. Suspendisse faucibus sem sit amet gravida euismod. Sed porttitor ornare risus. Donec tristique eu turpis in aliquet. Proin a auctor dui. Quisque condimentum pulvinar enim non vulputate. Sed at tincidunt nulla.
 
             </p>
 
+
+            <div class="ec-contact-group">
+                <h2 class="ec-subheader">
+                    Editors / News Directors
+                </h2>
+                <iframe width="100%" height="423px" src="https://docs.google.com/spreadsheets/d/1ZLwCBIBFS3_b5bVM0_h4v5WMiJU2LAPMy9zaXpKjEcI/pubhtml?gid=0&amp;single=true&amp;widget=false&amp;chrome=false&amp;range=A1:B56&amp;" scrolling="no"></iframe>
+            </div> 
+
+            <div class="ec-contact-group">
+                <h2 class="ec-subheader">
+                    Community Editors
+                </h2>
+                <iframe width="100%" height="300px" src="https://docs.google.com/spreadsheets/d/1ZLwCBIBFS3_b5bVM0_h4v5WMiJU2LAPMy9zaXpKjEcI/pubhtml?gid=2099050829&amp;single=true&amp;widget=false&amp;chrome=false&amp;range=A1:B56&amp;" scrolling="no"></iframe>
+            </div>     
+
+            <div class="ec-contact-group">
+                <h2 class="ec-subheader">
+                    Web Producers
+                </h2>
+                <iframe width="100%" height="201px" src="https://docs.google.com/spreadsheets/d/1ZLwCBIBFS3_b5bVM0_h4v5WMiJU2LAPMy9zaXpKjEcI/pubhtml?gid=205624584&amp;single=true&amp;widget=false&amp;chrome=false&amp;range=A1:B56&amp;" scrolling="no"></iframe>
+            </div>  
+
+            <div class="ec-contact-group">
+                <h2 class="ec-subheader">
+                    Reporters / Producers
+                </h2>
+                <iframe width="100%" height="1200px" src="https://docs.google.com/spreadsheets/d/1ZLwCBIBFS3_b5bVM0_h4v5WMiJU2LAPMy9zaXpKjEcI/pubhtml?gid=1354254847&amp;single=true&amp;widget=false&amp;chrome=false&amp;range=A1:B66&amp;" scrolling="no"></iframe>
+            </div>  
+
+            <div class="ec-contact-group">
+                <h2 class="ec-subheader">
+                    On-Air Hosts
+                </h2>
+                <iframe width="100%" height="402px" src="https://docs.google.com/spreadsheets/d/1ZLwCBIBFS3_b5bVM0_h4v5WMiJU2LAPMy9zaXpKjEcI/pubhtml?gid=176403866&amp;single=true&amp;widget=false&amp;chrome=false&amp;range=A1:B66&amp;" scrolling="no"></iframe>
+            </div>  
+
+            <div class="ec-contact-group">
+                <h2 class="ec-subheader">
+                    Radio Times
+                </h2>
+                <iframe width="100%" height="402px" src="https://docs.google.com/spreadsheets/d/1ZLwCBIBFS3_b5bVM0_h4v5WMiJU2LAPMy9zaXpKjEcI/pubhtml?gid=310055917&amp;single=true&amp;widget=false&amp;chrome=false&amp;range=A1:B66&amp;" scrolling="no"></iframe>
+            </div> 
+
+            <div class="ec-contact-group">
+                <h2 class="ec-subheader">
+                    Administrators
+                </h2>
+                <iframe width="100%" height="402px" src="https://docs.google.com/spreadsheets/d/1ZLwCBIBFS3_b5bVM0_h4v5WMiJU2LAPMy9zaXpKjEcI/pubhtml?gid=364817114&amp;single=true&amp;widget=false&amp;chrome=false&amp;range=A1:B66&amp;" scrolling="no"></iframe>
+            </div> 
+
+
+
+
+
+
+
+            <!--
 	
             <div class="panel-group" id="accordion">
 
@@ -199,11 +267,11 @@
                          });
                     </script>
 
+-->
 
-
-            </div>	<!--   closes div id = accordion  -->
+   <!--         </div>	--><!--   closes div id = accordion  -->
 	
-        </div>	  <!--   closes div id = google-wrapper    -->
+   <!--     </div>	 --> <!--   closes div id = google-wrapper    -->
 
 
 
